--- a/pages/canchas-ligas.html
+++ b/pages/canchas-ligas.html
@@ -3,137 +3,108 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dueños de Canchas - GPADEL - Plataforma de Gestión de Padel</title>
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="../css/style.css">
 
-   <!-- Boostrap -->    
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-</head>
-<body>
-  
-  <!-- NAVBAR -->
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GPADEL - Cancha y Ligas</title>
+  <title>GPADEL – Sitio en construcción</title>
 
   <!-- Tipografía -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap"
-    rel="stylesheet"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Boostrap -->    
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Librerías -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <!-- Iconos -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <!-- Estilos propios -->
-  <link rel="stylesheet" href="../css/style.css" />
-
-  <!-- Color input search -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-  
-
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
-  <!-- HERO CONTACTO (similar a Geneos, texto + bajada) Arme un hero generico para paginas-->
-  <section class="gp-pages-hero">
-    <div class="gp-container">
-      <h5>PROPIETARIOS</h5>
-      <h1>Canchas o Ligas</h1>
-    </div>
-  </section>
+<body class="page-construction d-flex flex-column min-vh-100">
 
+  <!-- CONTENIDO -->
+  <main class="flex-grow-1 d-flex align-items-center">
+    <section class="container-fluid">
+      <div class="row align-items-center">
 
+        <!-- Imagen -->
+        <div class="col-md-6 d-flex justify-content-center">
+          <img
+            src="../img/en-construccion.png"
+            alt="Sitio en construcción"
+            class="img-fluid"
+            style="max-width: 70%;"
+          >
+        </div>
 
-  <!-- FOOTER (boostrap) -->
+        <!-- Texto -->
+        <div class="col-md-6">
+          <h1 class="display-5 fw-bold mb-3 text-white">
+            Sitio en Construcción
+          </h1>
+
+          <p class="fs-5 mb-4 text-white">
+            El dashboard más completo para la gestión de ligas y propietarios de canchas.
+          </p>
+
+          <a href="../index.html" class="btn gp-btn-green btn-lg rounded-pill px-4">
+            Volver al inicio
+          </a>
+        </div>
+
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
   <footer class="gp-footer bg-black text-white pt-5 pb-4">
+    <div class="container">
 
-  <div class="container">
+      <div class="row text-center mb-4">
 
-    <!-- BLOQUES PRINCIPALES -->
-    <div class="row text-center mb-4">
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+          <a href="https://wa.me/5492494521418" target="_blank"
+             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+            <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
+            <span class="gp-footer-text">+54 9 249 4521418</span>
+          </a>
+        </div>
 
-      <!-- WhatsApp -->
-      <div class="col-12 col-md-4 mb-4 mb-md-0">
-        <a href="https://wa.me/5492494521418"
-           target="_blank"
-           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-          <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
-          <span class="gp-footer-text">+54 9 249 4521418</span>
-        </a>
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+          <a href="mailto:info@gpadel.com.ar"
+             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+            <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
+            <span class="gp-footer-text">info@gpadel.com.ar</span>
+          </a>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <a href="https://www.google.com/maps?q=Alem+1015,+Tandil" target="_blank"
+             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+            <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
+            <span class="gp-footer-text text-center">
+              Alem 1015 – Tandil<br>
+              Buenos Aires – Argentina
+            </span>
+          </a>
+        </div>
+
       </div>
 
-      <!-- Email -->
-      <div class="col-12 col-md-4 mb-4 mb-md-0">
-        <a href="mailto:info@gpadel.com.ar"
-           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-          <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
-          <span class="gp-footer-text">info@gpadel.com.ar</span>
-        </a>
+      <div class="d-flex justify-content-center gap-4 mb-3">
+        <a href="https://facebook.com/geneoscoop" class="text-white"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://instagram.com/geneos.coop" class="text-white"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://twitter.com/GeneosCoop" class="text-white"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://www.linkedin.com/company/geneoscoop/" class="text-white"><i class="fa-brands fa-linkedin-in"></i></a>
       </div>
 
-      <!-- Dirección -->
-      <div class="col-12 col-md-4">
-        <a href="https://www.google.com/maps?q=Alem+1015,+Tandil"
-           target="_blank"
-           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-          <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
-          <span class="gp-footer-text text-center">
-            Alem 1015 – Tandil<br>
-            Buenos Aires – Argentina
-          </span>
-        </a>
+      <div class="text-center small opacity-75">
+        DISEÑADO POR COOPERATIVA GENEOS LTDA.
       </div>
 
     </div>
-
-    <!-- REDES SOCIALES -->
-    <div class="d-flex justify-content-center gap-4 mb-3">
-      <a href="https://facebook.com/geneoscoop" target="_blank" class="text-white">
-        <i class="fa-brands fa-facebook-f"></i>
-      </a>
-      <a href="https://instagram.com/geneos.coop" target="_blank" class="text-white">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a href="https://twitter.com/GeneosCoop" target="_blank" class="text-white">
-        <i class="fa-brands fa-x-twitter"></i>
-      </a>
-      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" class="text-white">
-        <i class="fa-brands fa-linkedin-in"></i>
-      </a>
-    </div>
-
-    <!-- COPYRIGHT -->
-    <div class="text-center small opacity-75">
-      DISEÑADO POR COOPERATIVA GENEOS LTDA.
-    </div>
-
-  </div>
-</footer>
-
-
-    <!-- Redes sociales -->
-    <div class="gp-footer-social">
-      <a href="https://facebook.com/geneoscoop" target="_blank" rel="noopener"><i class="fa-brands fa-facebook-f"></i></a>
-      <a href="https://instagram.com/geneos.coop" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://twitter.com/GeneosCoop" target="_blank" rel="noopener"><i class="fa-brands fa-x-twitter"></i></a>
-      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin-in"></i></a>
-    </div>
-
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/es.js"></script>
-
-  <script src="../js/main.js"></script>
-
-  </body>
+</body>
 </html>
