--- a/pages/score.html
+++ b/pages/score.html
@@ -1,38 +1,36 @@
 <!doctype html>
 <html lang="es">
-<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Score - GPADEL</title>
 
-  <!-- Boostrap -->    
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Tipografía -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Iconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- Estilos propios -->
   <link rel="stylesheet" href="../css/style.css">
-
-    <!-- Estilos propios -->
-  <link rel="stylesheet" href="../css/style.css" />
-
-    <!-- Color input search -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-
 </head>
-<body>
-  
-  <!-- NAVBAR -->
+
+<body class="gp-layout">
+
+  <!-- HEADER -->
   <header class="gp-header">
     <div class="gp-container gp-header-inner">
       <a href="../index.html" class="gp-logo-link">
-        <img src="../img/gpadel-logo.svg" alt="GPADÉL - Plataforma de gestión de pádel" class="gp-logo-img">
+        <img src="../img/gpadel-logo.svg"
+             alt="GPADÉL - Plataforma de gestión de pádel"
+             class="gp-logo-img">
       </a>
 
-      <!-- Navegación desktop -->
       <nav class="gp-nav">
         <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
         <a href="score.html" class="gp-nav-link gp-nav-link--active">Quiero marcar</a>
@@ -40,13 +38,13 @@
         <a href="inscripcion-torneos.html" class="gp-nav-link">Torneos</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
       </nav>
+
       <div class="gp-header-actions">
         <a href="canchas-ligas.html" class="gp-header-cta">Canchas o Ligas</a>
         <a href="login.html" class="gp-header-icon" aria-label="Iniciar sesión">
           <i class="fa-regular fa-user"></i>
         </a>
 
-        <!-- Botón hamburguesa (solo se ve en mobile utilicé un JavaScript base ya que desconozco armarlo) -->
         <button class="gp-header-burger"
                 id="gpMenuToggle"
                 aria-label="Abrir menú"
@@ -57,7 +55,7 @@
       </div>
     </div>
 
-    <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
+    <!-- NAV MOBILE -->
     <nav class="gp-nav-mobile" id="gpMobileNav">
       <a href="reservar-cancha.html">Reservar Cancha</a>
       <a href="score.html">Quiero marcar</a>
@@ -67,87 +65,90 @@
     </nav>
   </header>
 
-   <!-- HERO -->
-  <section class="gp-pages-hero">
-    <div class="gp-container">
-      <h1>
-        Marcador de padel en vivo
-      </h1>
-      <p>
-        Creá tu partido, llevá el score y compartilo con tu equipo o con el mundo.
-      </p>
-    </div>
+  <!-- MAIN -->
+  <main class="gp-main">
 
-    <div class="gp-hero-cta">
+    <!-- HERO -->
+    <section class="gp-pages-hero">
+      <div class="gp-container">
+        <h1>Marcador de pádel en vivo</h1>
+        <p>
+          Creá tu partido, llevá el score y compartilo con tu equipo o con el mundo.
+        </p>
+      </div>
+
+      <div class="gp-hero-cta">
         <a href="score-type.html" class="gp-btn gp-btn--primary">Crear marcador</a>
         <a href="partidos-vivo.html" class="gp-btn gp-btn--secondary">Partidos en vivo</a>
       </div>
-  </section>
+    </section>
 
-<!-- FOOTER (boostrap) -->
+  </main>
+
+  <!-- FOOTER -->
   <footer class="gp-footer bg-black text-white pt-5 pb-4">
-      <div class="container">
+    <div class="container">
 
-        <!-- BLOQUES PRINCIPALES -->
-        <div class="row text-center mb-4">
+      <div class="row text-center mb-4">
 
-          <!-- WhatsApp -->
-          <div class="col-12 col-md-4 mb-4 mb-md-0">
-            <a href="https://wa.me/5492494521418"
-              target="_blank"
-              class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-              <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
-              <span class="gp-footer-text">+54 9 249 4521418</span>
-            </a>
-          </div>
-
-          <!-- Email -->
-          <div class="col-12 col-md-4 mb-4 mb-md-0">
-            <a href="mailto:info@gpadel.com.ar"
-              class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-              <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
-              <span class="gp-footer-text">info@gpadel.com.ar</span>
-            </a>
-          </div>
-
-          <!-- Dirección -->
-          <div class="col-12 col-md-4">
-            <a href="https://www.google.com/maps?q=Alem+1015,+Tandil"
-              target="_blank"
-              class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-              <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
-              <span class="gp-footer-text text-center">
-                Alem 1015 – Tandil<br>
-                Buenos Aires – Argentina
-              </span>
-            </a>
-          </div>
-
-        </div>
-
-        <!-- REDES SOCIALES -->
-        <div class="d-flex justify-content-center gap-4 mb-3">
-          <a href="https://facebook.com/geneoscoop" target="_blank" class="text-white">
-            <i class="fa-brands fa-facebook-f"></i>
-          </a>
-          <a href="https://instagram.com/geneos.coop" target="_blank" class="text-white">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
-          <a href="https://twitter.com/GeneosCoop" target="_blank" class="text-white">
-            <i class="fa-brands fa-x-twitter"></i>
-          </a>
-          <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" class="text-white">
-            <i class="fa-brands fa-linkedin-in"></i>
+        <!-- WhatsApp -->
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+          <a href="https://wa.me/5492494521418" target="_blank"
+             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+            <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
+            <span class="gp-footer-text">+54 9 249 4521418</span>
           </a>
         </div>
 
-        <!-- COPYRIGHT -->
-        <div class="text-center small opacity-75">
-          DISEÑADO POR COOPERATIVA GENEOS LTDA.
+        <!-- Email -->
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+          <a href="mailto:info@gpadel.com.ar"
+             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+            <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
+            <span class="gp-footer-text">info@gpadel.com.ar</span>
+          </a>
+        </div>
+
+        <!-- Dirección -->
+        <div class="col-12 col-md-4">
+          <a href="https://www.google.com/maps?q=Alem+1015,+Tandil"
+             target="_blank"
+             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+            <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
+            <span class="gp-footer-text text-center">
+              Alem 1015 – Tandil<br>
+              Buenos Aires – Argentina
+            </span>
+          </a>
         </div>
 
       </div>
+
+      <!-- Redes -->
+      <div class="d-flex justify-content-center gap-4 mb-3">
+        <a href="https://facebook.com/geneoscoop" target="_blank" class="text-white">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="https://instagram.com/geneos.coop" target="_blank" class="text-white">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://twitter.com/GeneosCoop" target="_blank" class="text-white">
+          <i class="fa-brands fa-x-twitter"></i>
+        </a>
+        <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" class="text-white">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a>
+      </div>
+
+      <div class="text-center small opacity-75">
+        DISEÑADO POR COOPERATIVA GENEOS LTDA.
+      </div>
+
+    </div>
   </footer>
 
-  </body>
+  <!-- JS -->
+  <script src="../js/main.js"></script>
+
+</body>
 </html>
