--- a/pages/inscripcion-torneos.html
+++ b/pages/inscripcion-torneos.html
@@ -3,29 +3,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Score - GPADEL</title>
+  <title>Torneos - GPADEL</title>
 
-  <!-- Boostrap -->    
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Tipografía -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Iconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- Estilos propios -->
   <link rel="stylesheet" href="../css/style.css">
-
-    <!-- Estilos propios -->
-  <link rel="stylesheet" href="../css/style.css" />
-
-    <!-- Color input search -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-
 </head>
-<body>
-  
-  <!-- NAVBAR -->
-<header class="gp-header">
+
+<body class="gp-layout gp-page-torneos">
+
+  <!-- HEADER / NAVBAR-->
+  <header class="gp-header">
     <div class="gp-container gp-header-inner">
       <a href="../index.html" class="gp-logo-link">
         <img src="../img/gpadel-logo.svg" alt="GPADÉL - Plataforma de gestión de pádel" class="gp-logo-img">
@@ -33,122 +31,285 @@
 
       <!-- Navegación desktop -->
       <nav class="gp-nav">
-        <a href="reservar-cancha.html" class="gp-nav-link gp-nav-link">Reservar Cancha</a>
+        <a href="reservar-cancha.html" class="gp-nav-link">Reservar Cancha</a>
         <a href="score.html" class="gp-nav-link">Marcador Gpadel</a>
-        <a href="inscripcion-torneos.html" class="gp-nav-link--active">Torneos</a>
+        <a href="inscripcion-torneos.html" class="gp-nav-link gp-nav-link--active">Torneos</a>
         <a href="ayuda-jugadores.html" class="gp-nav-link">Ayuda</a>
         <a href="contacto.html" class="gp-nav-link">Contacto</a>
       </nav>
+
       <div class="gp-header-actions">
         <a href="canchas-ligas.html" class="gp-header-cta">Canchas o Ligas</a>
         <a href="login.html" class="gp-header-icon" aria-label="Iniciar sesión">
           <i class="fa-regular fa-user"></i>
         </a>
 
-        <!-- Botón hamburguesa (solo se ve en mobile utilicé un JavaScript base ya que desconozco armarlo) -->
-        <button class="gp-header-burger"
-                id="gpMenuToggle"
-                aria-label="Abrir menú"
-                aria-expanded="false">
+        <!-- Botón hamburguesa -->
+        <button class="gp-header-burger" id="gpMenuToggle" aria-label="Abrir menú" aria-expanded="false">
           <i class="fa-solid fa-bars"></i>
           <i class="fa-solid fa-xmark"></i>
         </button>
       </div>
     </div>
 
-    <!-- NAV MOBILE (se abre con la hamburguesa, js base extra, repito, no conozco JS aun) -->
-        <nav class="gp-nav-mobile" id="gpMobileNav">
+    <!-- NAV MOBILE -->
+    <nav class="gp-nav-mobile" id="gpMobileNav">
+      <a href="reservar-cancha.html">Reservar Cancha</a>
+      <a href="score.html">Marcador Gpadel</a>
+      <a href="inscripcion-torneos.html">Torneos</a>
+      <a href="ayuda-jugadores.html">Ayuda</a>
+      <a href="contacto.html">Contacto</a>
 
-          <a href="reservar-cancha.html">Reservar Cancha</a>
-          <a href="score.html">Marcador Gpadel</a>
-          <a href="inscripcion-torneos.html">Torneos</a>
-          <a href="ayuda-jugadores.html">Ayuda</a>
-          <a href="contacto.html">Contacto</a>
+      <div class="gp-nav-mobile-divider"></div>
 
-          <!-- Separador visual -->
-          <div class="gp-nav-mobile-divider"></div>
-
-          <!-- Cambio de rol / contexto -->
-          <a href="canchas-ligas.html" class="gp-nav-mobile-switch">
-            <i class="fa-solid fa-right-from-bracket"></i>
-            Canchas o Ligas
-          </a>
-
-        </nav>
+      <a href="canchas-ligas.html" class="gp-nav-mobile-switch">
+        <i class="fa-solid fa-right-from-bracket"></i>
+        Canchas o Ligas
+      </a>
+    </nav>
   </header>
 
-  <!-- HERO CONTACTO (similar a Geneos, texto + bajada) Arme un hero generico para paginas-->
-  <section class="gp-pages-hero">
-    <div class="gp-container">
-      <h5>INSCRIPCIÓN</h5>
-      <h1>Torneos</h1>
-    </div>
-  </section>
+  <main class="gp-main">
 
-  <!-- FOOTER (boostrap) -->
+    <!-- HERO -->
+    <section class="gp-pages-hero">
+      <div class="gp-container">
+        <h5>CALENDARIO</h5>
+        <h1>Torneos</h1>
+        <p>Filtrá por año, mes y ciudad para encontrar el torneo ideal.</p>
+      </div>
+    </section>
+
+    <!-- CONTENIDO TORNEOS -->
+    <section class="gp-torneos">
+      <div class="gp-container">
+
+        <!-- Barra filtros -->
+        <div class="gp-filterbar">
+          <div class="row g-3 align-items-end">
+            <div class="col-12 col-md-3">
+              <label class="gp-filter-label" for="filterYear">Año</label>
+              <select id="filterYear" class="gp-filter-select">
+                <option value="">Todos</option>
+                <option value="2025">2025</option>
+                <option value="2026" selected>2026</option>
+                <option value="2027">2027</option>
+              </select>
+            </div>
+
+            <div class="col-12 col-md-3">
+              <label class="gp-filter-label" for="filterMonth">Mes</label>
+              <select id="filterMonth" class="gp-filter-select">
+                <option value="">Todos</option>
+                <option value="01">Enero</option>
+                <option value="02">Febrero</option>
+                <option value="03">Marzo</option>
+                <option value="04">Abril</option>
+                <option value="05">Mayo</option>
+                <option value="06">Junio</option>
+                <option value="07">Julio</option>
+                <option value="08">Agosto</option>
+                <option value="09">Septiembre</option>
+                <option value="10">Octubre</option>
+                <option value="11">Noviembre</option>
+                <option value="12">Diciembre</option>
+              </select>
+            </div>
+
+            <div class="col-12 col-md-4">
+              <label class="gp-filter-label" for="filterCity">Ciudad</label>
+              <select id="filterCity" class="gp-filter-select">
+                <option value="">Todas</option>
+                <option value="tandil">Tandil</option>
+                <option value="mar-del-plata">Mar del Plata</option>
+                <option value="bahia-blanca">Bahía Blanca</option>
+                <option value="necochea">Necochea</option>
+              </select>
+            </div>
+
+            <div class="col-12 col-md-2">
+              <div class="gp-filter-actions">
+                <button class="gp-btn gp-btn--primary" type="button" id="btnApplyFilters">
+                  Filtrar
+                </button>
+                <button class="gp-btn gp-btn--ghost" type="button" id="btnClearFilters">
+                  Limpiar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Head -->
+        <div class="gp-torneos-head">
+          <div>
+            <h2>Próximos torneos</h2>
+            <p id="gpResultsHint">Mostrando resultados según tu selección.</p>
+          </div>
+          <p class="m-0 small opacity-75">Tip: “Ver torneo” → “Inscribirme”.</p>
+        </div>
+
+        <!-- Grid -->
+        <div class="gp-torneo-grid" id="tournamentsGrid">
+
+          <!-- Card (ejemplo) -->
+          <article class="gp-torneo-card"
+            data-year="2026" data-month="03" data-city="tandil">
+            <div class="gp-torneo-top">
+              <span class="gp-pill"><i class="fa-solid fa-trophy"></i> Abierto</span>
+              <h3 class="gp-torneo-title">Copa GPADEL Apertura</h3>
+              <p class="gp-torneo-sub">Tandil • Complejo Faro Verde</p>
+            </div>
+            <div class="gp-torneo-body">
+              <div class="gp-torneo-meta">
+                <div class="gp-meta-row">
+                  <i class="fa-regular fa-calendar"></i>
+                  <span><strong>12–14</strong> Marzo 2026</span>
+                </div>
+                <div class="gp-meta-row">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <span>Buenos Aires, Argentina</span>
+                </div>
+                <div class="gp-meta-row">
+                  <i class="fa-solid fa-users"></i>
+                  <span>Categorías: 7ma, 6ta, 5ta</span>
+                </div>
+              </div>
+
+              <div class="gp-torneo-actions">
+                <a class="gp-link-mini" href="torneo-detalle.html">Ver torneo</a>
+                <a class="gp-btn gp-btn--primary" href="torneo-detalle.html">Entrar</a>
+              </div>
+            </div>
+          </article>
+
+          <article class="gp-torneo-card"
+            data-year="2026" data-month="04" data-city="mar-del-plata">
+            <div class="gp-torneo-top">
+              <span class="gp-pill"><i class="fa-solid fa-bolt"></i> Express</span>
+              <h3 class="gp-torneo-title">Torneo Relámpago Nocturno</h3>
+              <p class="gp-torneo-sub">Mar del Plata • World Pádel Center</p>
+            </div>
+            <div class="gp-torneo-body">
+              <div class="gp-torneo-meta">
+                <div class="gp-meta-row">
+                  <i class="fa-regular fa-calendar"></i>
+                  <span><strong>21</strong> Abril 2026</span>
+                </div>
+                <div class="gp-meta-row">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <span>Buenos Aires, Argentina</span>
+                </div>
+                <div class="gp-meta-row">
+                  <i class="fa-solid fa-ticket"></i>
+                  <span>Inscripción: $12.000 • Cupos: 24 parejas</span>
+                </div>
+              </div>
+
+              <div class="gp-torneo-actions">
+                <a class="gp-link-mini" href="torneo-detalle.html">Ver torneo</a>
+                <a class="gp-btn gp-btn--primary" href="torneo-detalle.html">Entrar</a>
+              </div>
+            </div>
+          </article>
+
+          <article class="gp-torneo-card"
+            data-year="2026" data-month="07" data-city="bahia-blanca">
+            <div class="gp-torneo-top">
+              <span class="gp-pill"><i class="fa-solid fa-medal"></i> Ranking</span>
+              <h3 class="gp-torneo-title">Liga Regional – Fecha 3</h3>
+              <p class="gp-torneo-sub">Bahía Blanca • Nova pádel</p>
+            </div>
+            <div class="gp-torneo-body">
+              <div class="gp-torneo-meta">
+                <div class="gp-meta-row">
+                  <i class="fa-regular fa-calendar"></i>
+                  <span><strong>03–05</strong> Julio 2026</span>
+                </div>
+                <div class="gp-meta-row">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <span>Buenos Aires, Argentina</span>
+                </div>
+                <div class="gp-meta-row">
+                  <i class="fa-solid fa-circle-info"></i>
+                  <span>Formato: fase de grupos + llaves</span>
+                </div>
+              </div>
+
+              <div class="gp-torneo-actions">
+                <a class="gp-link-mini" href="torneo-detalle.html">Ver torneo</a>
+                <a class="gp-btn gp-btn--primary" href="torneo-detalle.html">Entrar</a>
+              </div>
+            </div>
+          </article>
+
+        </div><!-- /grid -->
+
+        <!-- Empty state -->
+        <div class="gp-empty-state d-none" id="emptyState">
+          <h3>No encontramos torneos con esos filtros</h3>
+          <p>Probá cambiando el mes o la ciudad.</p>
+        </div>
+
+      </div>
+    </section>
+
+  </main>
+
+  <!-- FOOTER -->
   <footer class="gp-footer bg-black text-white pt-5 pb-4">
+    <div class="container">
 
-  <div class="container">
+      <div class="row text-center mb-4">
 
-    <!-- BLOQUES PRINCIPALES -->
-    <div class="row text-center mb-4">
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+          <a href="https://wa.me/5492494521418" target="_blank"
+             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+            <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
+            <span class="gp-footer-text">+54 9 249 4521418</span>
+          </a>
+        </div>
 
-      <!-- WhatsApp -->
-      <div class="col-12 col-md-4 mb-4 mb-md-0">
-        <a href="https://wa.me/5492494521418"
-           target="_blank"
-           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-          <i class="fa-brands fa-whatsapp gp-footer-icon mb-2"></i>
-          <span class="gp-footer-text">+54 9 249 4521418</span>
-        </a>
+        <div class="col-12 col-md-4 mb-4 mb-md-0">
+          <a href="mailto:info@gpadel.com.ar"
+             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+            <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
+            <span class="gp-footer-text">info@gpadel.com.ar</span>
+          </a>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <a href="https://www.google.com/maps?q=Alem+1015,+Tandil" target="_blank"
+             class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
+            <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
+            <span class="gp-footer-text text-center">
+              Alem 1015 – Tandil<br>
+              Buenos Aires – Argentina
+            </span>
+          </a>
+        </div>
+
       </div>
 
-      <!-- Email -->
-      <div class="col-12 col-md-4 mb-4 mb-md-0">
-        <a href="mailto:info@gpadel.com.ar"
-           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-          <i class="fa-regular fa-envelope gp-footer-icon mb-2"></i>
-          <span class="gp-footer-text">info@gpadel.com.ar</span>
-        </a>
+      <div class="d-flex justify-content-center gap-4 mb-3">
+        <a href="https://facebook.com/geneoscoop" target="_blank" class="text-white"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://instagram.com/geneos.coop" target="_blank" class="text-white"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://twitter.com/GeneosCoop" target="_blank" class="text-white"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" class="text-white"><i class="fa-brands fa-linkedin-in"></i></a>
       </div>
 
-      <!-- Dirección -->
-      <div class="col-12 col-md-4">
-        <a href="https://www.google.com/maps?q=Alem+1015,+Tandil"
-           target="_blank"
-           class="gp-footer-link d-flex flex-column align-items-center text-white text-decoration-none">
-          <i class="fa-solid fa-map-location-dot gp-footer-icon mb-2"></i>
-          <span class="gp-footer-text text-center">
-            Alem 1015 – Tandil<br>
-            Buenos Aires – Argentina
-          </span>
-        </a>
+      <div class="text-center small opacity-75">
+        DISEÑADO POR COOPERATIVA GENEOS LTDA.
       </div>
 
     </div>
+  </footer>
 
-    <!-- REDES SOCIALES -->
-    <div class="d-flex justify-content-center gap-4 mb-3">
-      <a href="https://facebook.com/geneoscoop" target="_blank" class="text-white">
-        <i class="fa-brands fa-facebook-f"></i>
-      </a>
-      <a href="https://instagram.com/geneos.coop" target="_blank" class="text-white">
-        <i class="fa-brands fa-instagram"></i>
-      </a>
-      <a href="https://twitter.com/GeneosCoop" target="_blank" class="text-white">
-        <i class="fa-brands fa-x-twitter"></i>
-      </a>
-      <a href="https://www.linkedin.com/company/geneoscoop/" target="_blank" class="text-white">
-        <i class="fa-brands fa-linkedin-in"></i>
-      </a>
-    </div>
+  <!-- Bootstrap JS (si lo necesitás) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- COPYRIGHT -->
-    <div class="text-center small opacity-75">
-      DISEÑADO POR COOPERATIVA GENEOS LTDA.
-    </div>
+  <!-- JS específico -->
+  <script src="../js/main.js"></script>
 
-  </div>
-</footer>
-  </body>
+</body>
 </html>
